# tktban

./: .gitignore  README.md  go.mod  pyproject.toml
.github/workflows/: ci.yml
cmd/tktban/: main.go
internal/model/: model.go  model_test.go
internal/settings/: settings.go  settings_test.go
internal/ticket/: ticket.go  ticket_test.go
internal/tkt/: tkt.go  tkt_test.go
internal/ui/: agent_badge_test.go  commands.go  datemodal.go  datemodal_test.go  editor.go  editor_test.go  hide_columns_test.go  highlight.go  highlight_test.go  modal_size_test.go  modals.go  model.go  opaque_check_test.go  outline_test.go  priority_select_test.go  spacing_test.go  styles.go  theme_test.go  ui_test.go  view.go  vim_test.go
tests/: conftest.py  test_app.py  test_model.py  test_screens.py  test_settings.py  test_tkt.py
tests/fixtures/.sdlc/: config.toml
tests/fixtures/.sdlc/board/: TKT-1.md  TKT-2.md  TKT-3.md  TKT-4.md  TKT-5.md  TKT-6.md  TKT-7.md
tktban/: __init__.py  __main__.py  app.py  model.py  screens.py  settings.py  styles.tcss  tkt.py
