[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tktban"
version = "0.1.0"
description = "A Textual kanban TUI for the tkt board (talks to tkt only via the CLI verb contract)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["textual>=0.60"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
tktban = "tktban.__main__:main"

[tool.setuptools]
packages = ["tktban"]
